# LandRecognition

./: CMakeLists.txt  LICENSE  README.md  compareFiles.cpp  groundRecognition.cpp  readtiff_opencv.cpp  readtiff_opencv.cu  readtiff_tiffio.cpp  regex.cpp
NaturalColor/CPU/: CMakeLists.txt  NaturalColorCPU.sh  Natural_Color.cpp  times.txt
NaturalColor/GPU/: CMakeLists.txt  NaturalColorGPU.sh  Natural_Color.cu  README.md  times.txt
Thermal_Image/CPU/: CMakeLists.txt  ThermalCPU.sh  ThermalCPUClouster.sh  Thermal_Image.cpp  times.txt
Thermal_Image/GPU/: CMakeLists.txt  thermal_image_GPU.cu  thermal_image_GPU.sh  times.txt
images/: info_MTL.txt
naturalColor/: CMakeLists.txt  NaturalColor.cpp  README.md
ndvi/: CMakeLists.txt  ndvi.cpp  ndvi_time.txt  script.sh
ndvi_CUDA/: CMakeLists.txt  ndvi.cu  ndvi_time.txt  script.sh
ndwi/: CMakeLists.txt  ndwi.cpp  ndwi_time.txt  script.sh
ndwi_CUDA/: CMakeLists.txt  ndwi.cu  ndwi_time.txt  script.sh
thermicImage/: CMakeLists.txt  termica.cpp
