cmake_minimum_required(VERSION 2.8)
project(thermal_image_GPU)
find_package(OpenCV REQUIRED)
find_package(CUDA REQUIRED)
set(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
include_directories(${OpenCV_INCLUDE_DIRS})
cuda_add_executable(thermal_image_GPU.out thermal_image_GPU.cu )
target_link_libraries(thermal_image_GPU.out ${OpenCV_LIBS})
